--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,7 @@
  
 VITE_API_BASE_URL=http://localhost:7000
- VITE_AUTH0_DOMAIN=dev-f8k7e0882glc0pof.us.auth0.com
-  VITE_AUTH0_CLIENT_ID=OPmRm7bjJZKKjGVKtOEDQEoGsRtxlJt5
-  VITE_AUTH0_CALLBACK_URL=http://localhost:5173
+VITE_AUTH0_DOMAIN=dev-f8k7e0882glc0pof.us.auth0.com
+VITE_AUTH0_CLIENT_ID=OPmRm7bjJZKKjGVKtOEDQEoGsRtxlJt5
+VITE_AUTH0_CALLBACK_URL=http://localhost:5173
+VITE_AUTH0_AUDIENCE=mern-food-ordering-app-api 
+#this is identifier of our backend api. it is extra bit of security bcz bakcend api only accept access tokens that comes from audience  
